--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body {
 }
 
 header {
-    background-color: #000000;
-    color: white;
+    background-color: blue;
+    color: black;
     padding: 2rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -22,7 +22,7 @@ main {
     padding: 2rem;
 }
 
-.introduction, .fun-facts, .quote {
+.introduction, .fun-facts, .interactive, .quote {
     background-color: #fff;
     padding: 2rem;
     margin: 2rem auto;
@@ -31,8 +31,8 @@ main {
     max-width: 600px;
 }
 
-.introduction h2, .fun-facts h2, .quote h2 {
-    color: #ff6f61;
+.introduction h2, .fun-facts h2, .interactive h2, .quote h2 {
+    color: gray;
     margin-bottom: 1rem;
 }
 
@@ -51,13 +51,41 @@ main {
     margin: 1rem 0;
 }
 
-.quote {
-    font-style: italic;
+.interactive h2 {
+    font-size: 2rem;
+    color: #ff6f61;
+    transition: transform 0.3s ease;
+}
+
+.interactive h2:hover {
+    transform: scale(1.1);
+    color: gray;
+}
+
+button {
+    background-color: blueviolet;
+    color: white;
+    border: none;
+    padding: 1rem 2rem;
+    font-size: 1.2rem;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: black;
+}
+
+#counter-text {
+    font-size: 1.2rem;
+    color: #333;
+    margin-top: 1rem;
 }
 
 footer {
-    background-color: #343a40;
-    color: white;
+    background-color: blue;
+    color:black;
     padding: 1rem;
     position: fixed;
     width: 100%;
